--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "express",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "5.1.0",
-    "mongodb": "^6.21.0"
+    "mongodb": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
